docs/requirements/v1.0.2/REQUIREMENTS.md

Requirements Summary
====================

# default

## As an API user, I want an average query response time of 1 second for q=* queries ([#69](https://github.com/NASA-PDS/registry-api/issues/69)) 


This requirement is not impacted by the current version
## As an API user, I want to handle long-running queries that take >10 seconds. ([#68](https://github.com/NASA-PDS/registry-api/issues/68)) 


This requirement is not impacted by the current version
## As an operator, I want to have a wrapper script for starting up the API service ([#67](https://github.com/NASA-PDS/registry-api/issues/67)) 


This requirement is not impacted by the current version
## As a user, I want to know why my query syntax is invalid ([#66](https://github.com/NASA-PDS/registry-api/issues/66)) 


This requirement is not impacted by the current version
## As a user,  I want specific end points for products which are not collections or bundles ([#65](https://github.com/NASA-PDS/registry-api/issues/65)) 


This requirement is not impacted by the current version
## As a user, I want the /products end point to work for any class of products ([#64](https://github.com/NASA-PDS/registry-api/issues/64)) 


This requirement is not impacted by the current version
## As a user, I want the end-point /api to redirect to the API documentation ([#63](https://github.com/NASA-PDS/registry-api/issues/63)) 


This requirement is not impacted by the current version
## As a user, I want to have a complete default fields (for now at least) ([#155](https://github.com/NASA-PDS/registry-api/issues/155)) 


This requirement is not impacted by the current version
## As a user, I want to have singular urls when I should only expect a single element in the response ([#61](https://github.com/NASA-PDS/registry-api/issues/61)) 


This requirement is not impacted by the current version
## As a user, I want to see the version of the API specification in the URL of the service ([#59](https://github.com/NASA-PDS/registry-api/issues/59)) 


This requirement is not impacted by the current version
## As a user, I want to see the version of the API specification in the URL of the service ([#8](https://github.com/NASA-PDS/registry-api/issues/8)) 


This requirement is not impacted by the current version
## As a user, I want the /products end point to work for any class of products ([#11](https://github.com/NASA-PDS/registry-api/issues/11)) 


This requirement is not impacted by the current version
## As a user,  I want to query for products from any PDS4 product type ([#12](https://github.com/NASA-PDS/registry-api/issues/12)) 


This requirement is not impacted by the current version
## As a user, I want to know why my query syntax is invalid ([#13](https://github.com/NASA-PDS/registry-api/issues/13)) 


This requirement is not impacted by the current version
## As an operator, I want to have a wrapper script for starting up the API service ([#14](https://github.com/NASA-PDS/registry-api/issues/14)) 


This requirement is not impacted by the current version
## As an API user, I want to handle long-running queries that take >10 seconds. ([#15](https://github.com/NASA-PDS/registry-api/issues/15)) 


This requirement is not impacted by the current version
## As an API user, I want an average query response time of 1 second for q=* queries ([#16](https://github.com/NASA-PDS/registry-api/issues/16)) 


This requirement is not impacted by the current version
## As an API caller(user) I want to specify fields for endpoints given a lidvid ([#80](https://github.com/NASA-PDS/registry-api/issues/80)) 


This requirement is not impacted by the current version
## the default proposed mime type in swagger-ui.html should be 'application/json' ([#88](https://github.com/NASA-PDS/registry-api/issues/88)) 


This requirement is not impacted by the current version
## As a user, I want to have an administrator contact when I am getting an error 500 from the server ([#109](https://github.com/NASA-PDS/registry-api/issues/109)) 


This requirement is not impacted by the current version
## As a user I want consistent /type/lidvlid/{child,parent}/{latest,all} ([#126](https://github.com/NASA-PDS/registry-api/issues/126)) 


This requirement is not impacted by the current version
## As a user, I want to get the product identifiers in a application/kvp+json format ([#132](https://github.com/NASA-PDS/registry-api/issues/132)) 


This requirement is not impacted by the current version
## As a user, I want to be able to paginate over any number of results returned from a query. ([#176](https://github.com/NASA-PDS/registry-api/issues/176)) 


This requirement is not impacted by the current version